[gd_scene load_steps=3 format=3 uid="uid://dfpxasv5v80bs"]

[ext_resource type="PackedScene" uid="uid://dyxmcywp3874g" path="res://assets/ui/quests_panel_slot.tscn" id="1_3dl8j"]
[ext_resource type="Script" path="res://scripts/quests_panel.gd" id="1_6txpd"]

[node name="quests_panel" type="Control"]
custom_minimum_size = Vector2(150, 350)
layout_mode = 3
anchors_preset = 0
offset_right = 206.0
offset_bottom = 507.0
script = ExtResource("1_6txpd")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(150, 350)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.966
anchor_bottom = 1.016
offset_right = 0.0039978
offset_bottom = -6.112
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_right = 75.0
offset_bottom = 189.0
grow_horizontal = 2

[node name="Main Quests" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Main Quests"]
layout_mode = 2
size_flags_vertical = 2
theme_override_font_sizes/font_size = 19
text = "Main Quests"
horizontal_alignment = 1
vertical_alignment = 1

[node name="quests_panel_slot_1" parent="Panel/VBoxContainer/Main Quests" instance=ExtResource("1_3dl8j")]
layout_mode = 2
size_flags_vertical = 1

[node name="quests_panel_slot_2" parent="Panel/VBoxContainer/Main Quests" instance=ExtResource("1_3dl8j")]
layout_mode = 2
size_flags_vertical = 1

[node name="quests_panel_slot_3" parent="Panel/VBoxContainer/Main Quests" instance=ExtResource("1_3dl8j")]
layout_mode = 2
size_flags_vertical = 1

[node name="Secondary Quests" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Secondary Quests"]
layout_mode = 2
size_flags_vertical = 2
theme_override_font_sizes/font_size = 19
text = "Secondary Quests"
horizontal_alignment = 1
vertical_alignment = 1

[node name="quests_panel_slot_4" parent="Panel/VBoxContainer/Secondary Quests" instance=ExtResource("1_3dl8j")]
layout_mode = 2
size_flags_vertical = 1

[node name="quests_panel_slot_5" parent="Panel/VBoxContainer/Secondary Quests" instance=ExtResource("1_3dl8j")]
layout_mode = 2
size_flags_vertical = 1

[node name="quests_panel_slot_6" parent="Panel/VBoxContainer/Secondary Quests" instance=ExtResource("1_3dl8j")]
layout_mode = 2
size_flags_vertical = 1
